--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 
-SITE_NAME_HEADER=Digital Garden
+SITE_NAME_HEADER=Josman's Digital Garden
 SITE_BASE_URL=https://digital-garden-xi.vercel.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
