--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
 SITE_NAME_HEADER=Josman's Digital Garden
-SITE_BASE_URL=https://digital-garden-xi.vercel.app
+SITE_BASE_URL=digital-garden-29705x3xu-josmanps.vercel.app
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
