--- a/.env
+++ b/.env
@@ -13,10 +13,10 @@ STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
 dgShowBacklinks=false
-dgShowLocalGraph=false
+dgShowLocalGraph=true
 dgShowInlineTitle=true
 dgShowFileTree=false
-dgEnableSearch=false
+dgEnableSearch=true
 dgShowToc=false
-dgLinkPreview=false
+dgLinkPreview=true
 dgShowTags=false
