--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 
-SITE_NAME_HEADER=Josman's Digital Garden
-SITE_BASE_URL=https://digital-garden-xi.vercel.app
+SITE_NAME_HEADER=Digital Garden
+SITE_BASE_URL=
 SHOW_CREATED_TIMESTAMP=false
 TIMESTAMP_FORMAT=MMM dd, yyyy h:mm a
 SHOW_UPDATED_TIMESTAMP=false
@@ -12,11 +12,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=false
-dgLinkPreview=true
-dgShowTags=true
+dgLinkPreview=false
+dgShowTags=false
