--- a/.env
+++ b/.env
@@ -12,11 +12,11 @@ NOTE_ICON_BACK_LINKS=false
 STYLE_SETTINGS_CSS=""
 dgHomeLink=true
 dgPassFrontmatter=false
-dgShowBacklinks=true
+dgShowBacklinks=false
 dgShowLocalGraph=true
-dgShowInlineTitle=true
+dgShowInlineTitle=false
 dgShowFileTree=false
-dgEnableSearch=true
+dgEnableSearch=false
 dgShowToc=false
-dgLinkPreview=true
-dgShowTags=true
+dgLinkPreview=false
+dgShowTags=false
